Add button styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,70 @@
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header-subsection1">
+        <h1 class="logo">Header Logo</h1>
+        <nav class="first-nav">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Features</a></li>
+            </ul>
+        </nav>
+        </div>
+        <div class="header-subsection2">
+        <h1 class="main-header">This Website is awesome</h1>
+        <p class="main-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+        <button class="btn">Sign up</button>
+        <div class="header-img">
+            <img src="" alt="">
+        </div>
+        </div>
+    </header>
+    <main>
+        <section>
+            <div class="section--1">
+            <h2 class="h2-text">Some random Information</h2>
+            <div class="card-container secondary">
+                <div class="card">
+                    <img src="./images/drop-of-water-gb54962240_640.jpg" alt="drop-of-water" class="img-section1">
+                    <p class="sub_text">this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <img src="./images/drop-of-water-gb54962240_640.jpg" alt="drop-of-water" class="img-section1">
+                    <p class="sub_text">this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <img src="./images/drop-of-water-gb54962240_640.jpg" alt="drop-of-water" class="img-section1">
+                    <p class="sub_text">this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <img src="./images/drop-of-water-gb54962240_640.jpg" alt="drop-of-water" class="img-section1">
+                    <p class="sub_text">this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+            </div>
+        </section>
+        <section>
+            <div class="quote">
+                <em>This is an inspiring quote, or a testimonial from a customer.
+                    Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it
+                    looks nice.</em>
+                    <p class="cite">- Thor, God of Thunder</p>
+            </div>
+        </section>
+        <section class="section--3">
+            <div class="container3">
+            <div class="left">
+                <strong class="strong-text">Call to action it's time!</strong>
+                <p>Sign up for our products by clicking the button over there</p>
+            </div>
+            <div class="right">
+                <button class="sec-btn">Sign up</button>
+            </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
