--- a/index.html
+++ b/index.html
@@ -73,5 +73,8 @@
             </div>
         </section>
     </main>
+    <footer>
+        <p>Copyright &copy; Odin project 2022</p>
+    </footer>
 </body>
 </html>
