--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
         </nav>
         </div>
         <div class="header-subsection2">
+        <div class="left-hero">
         <h1 class="main-header">This Website is awesome</h1>
         <p class="main-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
         <button class="btn">Sign up</button>
+        </div>
+        <div class="right-img">
         <div class="header-img">
-            <img src="" alt="">
+            <img src="./images/drop-of-water-gb54962240_640.jpg" alt="drop-of-water">
+        </div>
         </div>
         </div>
     </header>
